refactor: 1. enhance cache framework; 2. use generic type to defined controller response.