@@ -8,13 +8,13 @@ import org.springframework.data.domain.Sort;
 import org.springframework.data.mongodb.core.MongoTemplate;
 import org.springframework.data.mongodb.core.query.Criteria;
 import org.springframework.data.mongodb.core.query.Query;
+import ricciliao.cache.ProviderCacheStore;
+import ricciliao.cache.ProviderOp;
 import ricciliao.cache.common.CacheConstants;
-import ricciliao.x.cache.CacheKey;
-import ricciliao.x.cache.pojo.CacheBatchQuery;
-import ricciliao.x.cache.pojo.CacheDto;
-import ricciliao.x.cache.pojo.ConsumerOp;
+import ricciliao.x.cache.annotation.CacheId;
+import ricciliao.x.cache.pojo.CacheStore;
 import ricciliao.x.cache.pojo.ProviderInfo;
-import ricciliao.x.component.random.RandomGenerator;
+import ricciliao.x.cache.query.CacheBatchQuery;
 
 import java.lang.reflect.Field;
 import java.util.Arrays;
@@ -24,21 +24,21 @@ import java.util.Objects;
 public class MongoTemplateProvider extends CacheProvider {
 
     private final MongoTemplateProviderConstruct constr;
-    private final String cacheKeyName;
+    private final String cacheIdName;
 
     public MongoTemplateProvider(MongoTemplateProviderConstruct mongoTemplateProviderConstruct) {
         super(mongoTemplateProviderConstruct);
         this.constr = mongoTemplateProviderConstruct;
 
-        Field[] fields = CacheDto.class.getDeclaredFields();
+        Field[] fields = ProviderCacheStore.class.getDeclaredFields();
         List<Field> keyFieldList =
                 Arrays.stream(fields)
-                        .filter(field -> field.isAnnotationPresent(CacheKey.class))
+                        .filter(field -> field.isAnnotationPresent(CacheId.class))
                         .toList();
         if (CollectionUtils.isEmpty(keyFieldList)) {
             keyFieldList =
-                    Arrays.stream(this.getStoreProps().getStoreClassName().getSuperclass().getDeclaredFields())
-                            .filter(field -> field.isAnnotationPresent(CacheKey.class))
+                    Arrays.stream(CacheStore.class.getDeclaredFields())
+                            .filter(field -> field.isAnnotationPresent(CacheId.class))
                             .toList();
         }
         if (CollectionUtils.size(keyFieldList) != 1) {
@@ -50,21 +50,20 @@ public class MongoTemplateProvider extends CacheProvider {
                     )
             );
         }
-        this.cacheKeyName = keyFieldList.get(0).getName();
+        this.cacheIdName = keyFieldList.getFirst().getName();
     }
 
     @Override
-    public boolean create(ConsumerOp.Single<CacheDto> operation) {
-        operation.setId(RandomGenerator.nextString(12).allAtLeast(3).generate());
+    public boolean create(ProviderOp.Single operation) {
         this.constr.mongoTemplate.insert(operation.getData(), this.getStoreProps().getStore());
 
         return true;
     }
 
     @Override
-    public boolean update(ConsumerOp.Single<CacheDto> operation) {
+    public boolean update(ProviderOp.Single operation) {
         UpdateResult result = this.constr.mongoTemplate.replace(
-                Query.query(Criteria.where(this.cacheKeyName).is(operation.getData().getCacheKey())),
+                Query.query(Criteria.where(this.cacheIdName).is(operation.getData().getCacheKey())),
                 operation.getData(),
                 this.getStoreProps().getStore()
         );
@@ -73,16 +72,16 @@ public class MongoTemplateProvider extends CacheProvider {
     }
 
     @Override
-    public ConsumerOp.Single<CacheDto> get(String key) {
-        CacheDto cache =
+    public ProviderOp.Single get(String key) {
+        ProviderCacheStore cache =
                 this.constr.mongoTemplate.findOne(
-                        Query.query(Criteria.where(this.cacheKeyName).is(key)),
-                        this.getStoreProps().getStoreClassName(),
+                        Query.query(Criteria.where(this.cacheIdName).is(key)),
+                        ProviderCacheStore.class,
                         this.getStoreProps().getStore()
                 );
         if (Objects.nonNull(cache)) {
 
-            return new ConsumerOp.Single<>(cache, this.getAdditionalProps().getTtl().toMillis());
+            return new ProviderOp.Single(this.getAdditionalProps().getTtl().toSeconds(), cache);
         }
 
         return null;
@@ -93,38 +92,38 @@ public class MongoTemplateProvider extends CacheProvider {
 
         return Objects.nonNull(
                 this.constr.mongoTemplate.findAndRemove(
-                        Query.query(Criteria.where(this.cacheKeyName).is(key)),
-                        this.getStoreProps().getStoreClassName(),
+                        Query.query(Criteria.where(this.cacheIdName).is(key)),
+                        ProviderCacheStore.class,
                         this.getStoreProps().getStore()
                 )
         );
     }
 
     @Override
-    public ConsumerOp.Batch<CacheDto> list(CacheBatchQuery query) {
-        List<CacheDto> data =
+    public ProviderOp.Batch list(CacheBatchQuery query) {
+        List<ProviderCacheStore> data =
                 this.constr.mongoTemplate.find(
                         this.toQuery(query),
-                        this.getStoreProps().getStoreClassName(),
+                        ProviderCacheStore.class,
                         this.getStoreProps().getStore()
                 );
 
-        return new ConsumerOp.Batch<>(data, this.getStoreProps().getAddition().getTtl().toMillis());
+        return new ProviderOp.Batch(this.getStoreProps().getAddition().getTtl().toSeconds(), data.toArray(new ProviderCacheStore[0]));
     }
 
     @Override
     public boolean delete(CacheBatchQuery query) {
-        this.constr.mongoTemplate.remove(this.toQuery(query), this.getStoreProps().getStoreClassName());
+        this.constr.mongoTemplate.remove(this.toQuery(query), this.getStoreProps().getStore());
 
         return false;
     }
 
     @Override
     public ProviderInfo getProviderInfo() {
-        CacheDto maxUpdatedDtm =
+        ProviderCacheStore maxUpdatedDtm =
                 this.constr.mongoTemplate.findOne(
                         new Query().with(Sort.by(Sort.Order.desc("updatedDtm"))).limit(1),
-                        this.getStoreProps().getStoreClassName(),
+                        ProviderCacheStore.class,
                         this.getStoreProps().getStore()
                 );
         ProviderInfo result = new ProviderInfo(this.getConsumerIdentifier());
